--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd ${{ github.workspace }}/todo-mobile
+          cd todo-mobile
           npm install
 
       - name: Setup Java
@@ -30,16 +30,17 @@ jobs:
 
       - name: Prebuild Android
         run: |
-          cd ${{ github.workspace }}/todo-mobile
+          cd todo-mobile
           npx expo prebuild --platform android
 
       - name: Build APK
         run: |
-          cd ${{ github.workspace }}/todo-mobile/android
+          cd todo-mobile/android
+          chmod +x gradlew
           ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: ${{ github.workspace }}/todo-mobile/android/app/build/outputs/apk/debug/app-debug.apk
+          path: todo-mobile/android/app/build/outputs/apk/debug/app-debug.apk
