--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,8 @@
 [build]
 builder = "NIXPACKS"
+buildCommand = "npm install && npm run build"
 
 [deploy]
-startCommand = "node todo-api/dist/main.js"
+startCommand = "node dist/main.js"
+restartPolicy = "ON_FAILURE"
+maxRestartRetries = 10
