--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -40,10 +40,19 @@ jobs:
         run: npx expo prebuild --platform android
 
       - name: Build APK
-        working-directory: ./todo-mobile/android
+        working-directory: ./todo-mobile
         run: |
+          # 创建并清理 assets 目录
+          mkdir -p android/app/src/main/assets
+          rm -rf android/app/src/main/assets/*
+
+          # 手动打入 JS Bundle，显式指定工程名和配置
+          npx react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+
+          # 执行 Gradle 构建，确保资源被打包
+          cd android
           chmod +x gradlew
-          ./gradlew assembleDebug
+          ./gradlew clean assembleDebug --stacktrace
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
