fix: add @react-native/metro-config for android build

--- a/todo-mobile/package.json
+++ b/todo-mobile/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2",
-    "@react-native-community/cli": "latest"
+    "@react-native-community/cli": "latest",
+    "@react-native/metro-config": "latest"
   },
   "private": true
 }
