--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Prebuild Android
         working-directory: ./todo-mobile
+        env:
+          EXPO_USE_METRO_WORKSPACE: 1
         run: |
           # 清理可能存在的旧 android 目录以确保 prebuild 重新生成最新的配置
           rm -rf android
