--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -57,7 +57,7 @@ jobs:
           # 执行 Gradle 构建，确保资源被打包
           cd android
           chmod +x gradlew
-          ./gradlew clean assembleDebug --stacktrace
+          ./gradlew clean assembleDebug --stacktrace --info --warning-mode all
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
