--- a/todo-mobile/package.json
+++ b/todo-mobile/package.json
@@ -17,7 +17,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^4.2.2",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
