--- a/todo-mobile/package.json
+++ b/todo-mobile/package.json
@@ -16,7 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-reanimated": "^4.2.2",
     "react-native-web": "^0.21.0"
   },
