--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -69,10 +69,13 @@ jobs:
           # 执行 Gradle 构建，确保资源被打包
           cd android
           chmod +x gradlew
-          ./gradlew clean assembleDebug --stacktrace --info --warning-mode all
+          ./gradlew clean --stacktrace --warning-mode all
+          ./gradlew assembleRelease -PreactNativeArchitectures=arm64-v8a -Pandroid.enableMinifyInReleaseBuilds=true -Pandroid.enableShrinkResourcesInReleaseBuilds=true --stacktrace --warning-mode all
+          ./gradlew assembleRelease -PreactNativeArchitectures=armeabi-v7a -Pandroid.enableMinifyInReleaseBuilds=true -Pandroid.enableShrinkResourcesInReleaseBuilds=true --stacktrace --warning-mode all
+          ./gradlew assembleRelease -PreactNativeArchitectures=x86_64 -Pandroid.enableMinifyInReleaseBuilds=true -Pandroid.enableShrinkResourcesInReleaseBuilds=true --stacktrace --warning-mode all
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk
-          path: todo-mobile/android/app/build/outputs/apk/debug/app-debug.apk
+          name: android-apk-release
+          path: todo-mobile/android/app/build/outputs/apk/release/*.apk
