--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -70,12 +70,12 @@ jobs:
           cd android
           chmod +x gradlew
           ./gradlew clean --stacktrace --warning-mode all
-          ./gradlew assembleRelease -PreactNativeArchitectures=arm64-v8a -Pandroid.enableMinifyInReleaseBuilds=true -Pandroid.enableShrinkResourcesInReleaseBuilds=true --stacktrace --warning-mode all
-          ./gradlew assembleRelease -PreactNativeArchitectures=armeabi-v7a -Pandroid.enableMinifyInReleaseBuilds=true -Pandroid.enableShrinkResourcesInReleaseBuilds=true --stacktrace --warning-mode all
-          ./gradlew assembleRelease -PreactNativeArchitectures=x86_64 -Pandroid.enableMinifyInReleaseBuilds=true -Pandroid.enableShrinkResourcesInReleaseBuilds=true --stacktrace --warning-mode all
+          ./gradlew assembleDebug -PreactNativeArchitectures=arm64-v8a --stacktrace --warning-mode all
+          ./gradlew assembleDebug -PreactNativeArchitectures=armeabi-v7a --stacktrace --warning-mode all
+          ./gradlew assembleDebug -PreactNativeArchitectures=x86_64 --stacktrace --warning-mode all
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk-release
-          path: todo-mobile/android/app/build/outputs/apk/release/*.apk
+          name: android-apk-debug-split
+          path: todo-mobile/android/app/build/outputs/apk/debug/*.apk
